# my-awesome-pastebin

./: .env.example  .gitignore  Makefile  docker-compose.yml
.github/workflows/: audit.yml  lint.yml  test.yml
backend/admin_panel/: Dockerfile  Makefile  pyproject.toml
backend/admin_panel/admin/: asgi.py  celery.py  settings.py  test_.py  urls.py  wsgi.py
backend/admin_panel/src/pastes/: admin.py  models.py  tasks.py
backend/admin_panel/src/pastes/migrations/: 0001_initial.py
backend/kafka_consumer/: Dockerfile  Makefile  pyproject.toml  test_.py
backend/web_api/: Dockerfile  Makefile  pyproject.toml  test_.py
