[project]
requires-python = ">=3.10"
name = "web_api"
version = "0.1.0"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn==0.32.*",
    "sqlalchemy==2.0.*",
    "psycopg2-binary==2.9.*",
    "redis==5.1.*",
    "confluent-kafka==2.0.*",
    "python-jose==3.3.*",
    "jinja2==3.1.*",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
